--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+p, h1 {
+    margin:0;
+}
 .page {
 }
 .container {
@@ -6,16 +9,22 @@
     justify-content: center;
     align-items: center;
 }
-.name {
-    font-size: 4em;
-    font-family: Georgia;
-}
-.folio {
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     cursor: pointer;
+    font-size: 30px;
+    font-family: sans-serif;
+}
+.content-text {
+    /*cursor: pointer;*/
+    /*font-size: 30px;*/
+    /*font-family: sans-serif;*/
 }
 
-.folio:hover {
+.content:hover {
     transition: all 0.3s linear;
-    font-size: 80px;
+    font-size: 45px;
     color: darkslategrey;
 }
